* AbstractMessageSource returns default message if passed-in message code is null
* AbstractMessageSource just falls back to message code as message if no default message given
* AbstractMessageSource's "getMessageInternal" method returns null instead of throwing NoSuchMessageException
* EventPublicationInterceptor implements ApplicationContextAware rather than extending ApplicationObjectSupport

Package org.springframework.jdbc.support
* changed SQLErrorCodesFactory now does cache database product name in a Map based on hashCode from DataSource to avoid unnecessary meta data lookups

Package org.springframework.orm
* fixed Hibernate Session unbinding in case of JtaTransactionManager and flush failure im beforeCommit synchronization

Package org.springframework.remoting
* refined exceptions thrown by RmiClientInterceptor's "createRmiProxy" and RmiProxyFactoryBean's "afterPropertiesSet"

Package org.springframework.transaction
* fixed AbstractPlatformTransactionManager's handling of beforeCompletion callbacks in case of beforeCommit failures
* added WebSphere 5.1 check to WebSphereTransactionManagerFactoryBean (covering versions 5.1, 5.0 and 4 now)

Package org.springframework.validation
* factored out message code resolution into MessageCodesResolver strategy, with DefaultMessageCodesResolver impl
* DefaultMessageCodesResolver generates codes for specific elements and the whole collection in case of array/List/Map
* DefaultMessageCodesResolver generates code for the type of a field, e.g. "typeMismatch.java.lang.String"
* DefaultMessageCodesResolver generates code for the object name in case of an ObjectError, e.g. "myError.myForm"
* fixed bug where DataBinder would choke on null values of required fields, resulting in an NPE

Package org.springframework.web
* added MaxUploadSizeExceededException to multipart package, as a specific subclass of MultipartException
* CommonsMultipartResolver and CosMultipartResolver throw MaxUploadSizeExceededException when appropriate